# kuckuck

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  domain-specific-terms.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build_executable.yml  python-publish.yml  unittests.yml
integrations/claude-code/: README.md  settings.example.json
integrations/mcp/: README.md  claude_code.json  claude_desktop.json  cursor.json  opencode.json
src/kuckuck/: __init__.py  __main__.py  config.py  crypto.py  install_hook.py  mapping.py  options.py  pseudonymize.py  runner.py
src/kuckuck/_hooks/: __init__.py  kuckuck-pseudo.ps1  kuckuck-pseudo.sh
src/kuckuck/detectors/: __init__.py  base.py  denylist.py  email.py  handle.py  ner.py  phone.py  resolver.py
src/kuckuck/preprocessors/: __init__.py  base.py  eml.py  markdown.py  msg.py  text.py  xml.py
src/kuckuck_mcp/: __init__.py  middleware.py  proxy.py  server.py  transform.py
unittests/: .pylintrc  smoke_test_exe.py  smoke_test_exe_ner.py  test_cli.py  test_config.py  test_crypto.py  test_detectors.py  test_install_claude_hook.py  test_mapping.py  test_mcp_extra_in_ci.py  test_mcp_proxy.py  test_mcp_server.py  test_ner.py  test_preprocessors.py  test_pseudonymize.py  test_run_pseudonymize.py
unittests/__snapshots__/: test_preprocessors.ambr  test_pseudonymize.ambr
unittests/example_files/: confluence_storage.xml  sample.md  sample_email.eml  sample_html_email.eml
